      callcard_admin.php,
      callcard_report_export.php,
      called_counts_multilist_report.php,
      fcstats.php,
      fcstats_detail.php,
      vicidial_custom_reports_admin.php: Added screen color settings
    - AST_OUTBOUNDsummary_interval.php: Added screen color settings, fixed display bug
    - New screen_colors.php.
  * New extras/mysql_update/mysql-1516.sql.
  * ADMIN_backup_pl (2017-030):
    - Add dir /usr/local/sbin.
       
2.25.9.1

  [Jörg Frings-Fürst]
  * Correct typo at admin.php.
  * Release 2.25.9.1 2017-08-29

2.25.9

  [Jörg Frings-Fürst]
  * Add upstream Rev. 2811:
    - admin.php,
    - New AST_DIDstats_v2.php: Added Inbound DID Summary Report
  * ADMIN_backup_pl (2017-028):
    - Add missing files/dirs
      + /etc/apache2
      + /etc/letsencrypt
      + /usr/share/astguiclient/AST_DB_lead_status_change.pl
   * admin.php (2017-029):
     - Add br's after changelog. 
   * Release 2.25.9 2017-08-29

2.25.8

  [Jörg Frings-Fürst]
  * Add missing fallbacks on translations (2017-027).
  * Add upstream Rev. 2809:
    - AST_email_web_report.pl,
    - help.php: Added report filename_override option
    - AST_API_log_report.php,
    - AST_CLOSERstats_v2.php,
    - AST_agent_days_detail.php,
    - AST_agent_performance_detail.php,
    - AST_agent_status_detail.php,
    - AST_agent_time_detail.php,
    - AST_agent_timeclock_detail.php,
    - AST_carrier_log_report.php,
    - AST_email_log_report.php,
    - AST_parkstats.php,
    - AST_performance_comparison_report.php,
    - AST_recording_log_report.php,
    - AST_user_group_hourly_detail.php,
    - AST_user_group_hourly_detail_v2.php,
    - AST_usergroup_login_report.php,
    - admin.php,
    - callcard_admin.php: Added HTML formatting and screen colors
  * New extras/mysql_update/mysql-1515.sql.
  * Add upstream Rev. 2810:
    - admin_modify_lead.php: Added link to turn on/off arcchived logs display
  * Release 2.25.8 2017-08-27

2.25.7

  [Jörg Frings-Fürst]
  * Add upstream Rev. 2803: